Add notebook for step 1

--- a/solution/notebooks/01-prepare-data.ipynb
+++ b/solution/notebooks/01-prepare-data.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,10 +45,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_creditcard = pd.read_csv('../data/raw/UCI_Credit_card.csv')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -76,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,10 +87,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_train, df_test = train_test_split(df_creditcard, test_size=0.1)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -113,10 +117,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df_train.to_csv('../data/processed/train.csv', index=None)\n",
+    "df_test.to_csv('../data/processed/test.csv', index=None)"
+   ]
   },
   {
    "cell_type": "markdown",
