--- a/solution/notebooks/01-prepare-data.ipynb
+++ b/solution/notebooks/01-prepare-data.ipynb
@@ -30,7 +30,7 @@
     "Let's load it up and see what it looks like:\n",
     "\n",
     "* First, import the pandas package (already done for you)\n",
-    "* Next, use the function [pd.read_csv(...)]() to load the dataset and assign it to `df_creditcard`. \n",
+    "* Next, use the function [pd.read_csv(...)](https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.read_csv.html) to load the dataset and assign it to `df_creditcard`. \n",
     "* Finally, call `df_creditcard.info()` to get some insights into what is in the dataset.\n"
    ]
   },
@@ -45,11 +45,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_creditcard = pd.read_csv('../data/raw/UCI_Credit_card.csv')"
+    "df_creditcard = pd.read_csv('../data/raw/UCI_Credit_Card.csv')"
    ]
   },
   {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
