Fix description for storing models on disk

--- a/notebooks/02-train-model.ipynb
+++ b/notebooks/02-train-model.ipynb
@@ -311,7 +311,7 @@
     "Follow these steps to save the model:\n",
     "\n",
     "* First, import [joblib]() a serialization library (Already done for you). \n",
-    "* Next, call `joblib.save(classifier, '../models/classifier.bin')` to save the model."
+    "* Next, call `joblib.dump(classifier, '../models/classifier.bin')` to save the model."
    ]
   },
   {
