Fix link in description

--- a/notebooks/02-train-model.ipynb
+++ b/notebooks/02-train-model.ipynb
@@ -310,7 +310,7 @@
     "In the previous sections we've trained and tested a machine learning model. Let's save it on disk for reuse later.\n",
     "Follow these steps to save the model:\n",
     "\n",
-    "* First, import [joblib]() a serialization library (Already done for you). \n",
+    "* First, import [joblib](https://joblib.readthedocs.io/en/latest/) a serialization library (Already done for you). \n",
     "* Next, call `joblib.dump(classifier, '../models/classifier.bin')` to save the model."
    ]
   },
